antsurance/force-app/main/default/objects/Policy_Endorsement__c/Policy_Endorsement__c.object-meta.xml
<CustomObject>
    <description>A form attached to a policy that changes it: an endorsement that adds or alters coverage, an exclusion, a benefit the policyholder is entitled to such as roadside assistance, a discount, or a lienholder interest. It carries the form number and any premium change.</description>
    <label>Policy Endorsement</label>
    <nameField>
        <label>Form Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>