antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What the form does, in plain language. Markdown is rendered on the record page.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>