antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>When the form took effect.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>