antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Number__c</fullName>
    <description>The form reference printed on the declarations page, such as ANT HO 04 61.</description>
    <label>Form Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>