antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Limit_Amount__c</fullName>
    <description>The limit the form adds or changes, if any.</description>
    <label>Limit</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>