antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Premium_Change__c.field-meta.xml
<CustomField>
    <fullName>Premium_Change__c</fullName>
    <description>What the form adds to or takes off the annual premium. Negative for a discount.</description>
    <label>Premium</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>