antsurance/force-app/main/default/objects/Policy_Endorsement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What the form does to the policy.</description>
    <label>Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Lienholder or Mortgagee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>